--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,11 +6,11 @@ import imgWebp from "../../public/img.webp";
 <section class="container mx-auto p-8">
   <div class="flex items-center justify-center mx-auto self-center mt-[15%]">
     <div class="w-1/2">
-      <h2 class="text-7xl mb-3 text-slate-800">Junior Pezantes</h2>
-      <h3 class="typing text-2xl mb-3 text-slate-600">
+      <h2 class="text-7xl mb-3 text-slate-50 uppercase font-bold">Junior Pezantes</h2>
+      <h3 class="typing text-2xl mb-3 text-slate-100">
         Ingeniero de software & desarrollador fullstack
       </h3>
-      <p class="mb-5 text-slate-500">
+      <p class="mb-5 text-slate-200">
         Diseño y desarrollo servicios para clientes de todos los tamaños,
         especializándome en la creación de sitios web, servicios web y tiendas
         en línea modernos y elegantes.
@@ -48,7 +48,7 @@ import imgWebp from "../../public/img.webp";
         color: transparent
     }
     50% {
-        color: black;
+        color: rgb(255, 255, 255);
     }
 }
 </style>
