--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -1,9 +1,10 @@
 ---
 import Check from "../../public/icons/Check.astro";
+import Title from "./Title.astro";
 ---
 
 <section class="container p-8 lg:md:sm:mx-auto">
-  <h2 class="text-4xl text-left pl-8">A Detailed Summary of Life</h2>
+  <Title title="Experiencia"/>
   <ul class="timeline">
     <li class="timeline">
       <Check/>
