--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,43 +1,38 @@
-
+---
+import Title from "./Title.astro"
+---
 <section class="container p-8 lg:md:sm:mx-auto">
-  <div class="isolate bg-white px-6 lg:px-8">
-      
-    <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
-      <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-    <div class="mx-auto max-w-2xl text-center">
-      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contactame</h2>
-    </div>
-    <form action="https://formsubmit.co/werras04@gmail.com" method="POST" class="mx-auto max-w-xl sm:mt-20">
-      <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
-
-        <label for="fullname" class="block text-sm font-semibold leading-6 text-gray-900 sm:col-span-2">Nombre Completo
+  <div class="px-6 lg:px-8">
+    <Title title="Contactame"/>
+    <form action="https://formsubmit.co/werras04@gmail.com" method="POST" class="max-w-xl sm:mt-20">
+      <div class="grid grid-cols-1 gap-x-8 sm:grid-cols-2">
+        <label for="fullname" class="block text-sm font-semibold leading-6 text-white sm:col-span-2 mb-6">Nombre Completo
           <div class="mt-2.5">
-            <input type="text" name="fullname" id="fullname" autocomplete="given-name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            <input type="text" name="fullname" id="fullname" autocomplete="given-name" class="block w-full rounded-md border-0 px-3.5 py-2 text-slate-600 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset sm:text-sm sm:leading-6">
           </div>
         </label>
 
-        <label for="email" class="block text-sm font-semibold leading-6 text-gray-900 sm:col-span-2">Correo
+        <label for="email" class="block text-sm font-semibold leading-6 text-white sm:col-span-2 mb-6">Correo
           <div class="mt-2.5">
-            <input type="email" name="email" autocomplete="email" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            <input type="email" name="email" autocomplete="email" class="block w-full rounded-md border-0 px-3.5 py-2 text-slate-600 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset sm:text-sm sm:leading-6">
           </div>
         </label>
 
-          <label for="subject" class="block text-sm font-semibold leading-6 text-gray-900 sm:col-span-2">Asunto
+          <label for="subject" class="block text-sm font-semibold leading-6 text-white sm:col-span-2 mb-6">Asunto
             <div class="mt-2.5">
-              <input type="text" name="subject" autocomplete="organization" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+              <input type="text" name="subject" autocomplete="organization" class="block w-full rounded-md border-0 px-3.5 py-2 text-slate-600 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset sm:text-sm sm:leading-6">
             </div>
           </label>
 
-          <label for="message" class="block text-sm font-semibold leading-6 text-gray-900 sm:col-span-2">Mensaje
+          <label for="message" class="block text-sm font-semibold leading-6 text-white sm:col-span-2 mb-6">Mensaje
             <div class="mt-2.5">
-              <textarea name="message" id="message" rows="4" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+              <textarea name="message" id="message" rows="4" class="block w-full rounded-md border-0 px-3.5 py-2 text-slate-600 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset sm:text-sm sm:leading-6"></textarea>
             </div>
           </label>
 
       </div>
       <div class="mt-10">
-        <button type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Enviar</button>
+        <button type="submit" class="block w-full rounded-md bg-[#0d1117] px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-[#253041] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Enviar</button>
       </div>
     </form>
   </div>
