--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,10 @@ const { title } = Astro.props;
 	box-sizing: border-box;
 }
 
+body{
+	background: #8f959c;
+}
+
 span, p{
 text-wrap: pretty;
 }
@@ -39,7 +43,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h2, th{
-	color: #1e293b;
+	color: #f8fafc;
 }
 h3, li{
 	color: #475569; 
