--- a/public/skills/GitHub.astro
+++ b/public/skills/GitHub.astro
@@ -1,3 +1,7 @@
+---
+const {styleName} =Astro.props;
+---
+
 <svg
   class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1"
   xmlns="http://www.w3.org/2000/svg"
