--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,10 +24,12 @@ const { title } = Astro.props;
 *{
 	margin: 0;
 	padding: 0;
+	scroll-behavior: smooth;
 }
 
 *, *::before, *::after{
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 
 body{
