--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,10 +4,10 @@ import imgWebp from "../../public/img.webp";
 ---
 
 <section class="container mx-auto p-8">
-  <div class="flex items-center justify-center mx-auto self-center mt-[15%]">
-    <div class="w-1/2">
-      <h2 class="text-7xl mb-3 text-slate-50 uppercase font-bold">Junior Pezantes</h2>
-      <h3 class="typing text-2xl mb-3 text-slate-100">
+  <div class="flex items-center justify-center mx-0 lg:md:sm:mx-auto self-center mt-[15%]">
+    <div class="w-full lg:md:sm:w-1/2">
+      <h2 class="text-5xl lg:md:sm:text-7xl mb-3 text-slate-50 uppercase font-bold">Junior Pezantes</h2>
+      <h3 class="typing text-xl lg:md:sm:text-2xl mb-3 text-slate-100">
         Ingeniero de software & desarrollador fullstack
       </h3>
       <p class="mb-5 text-slate-200">
@@ -21,7 +21,7 @@ import imgWebp from "../../public/img.webp";
         href="../../public/CV/cv.pdf">Descargar CV</a
       >
     </div>
-    <div class="flex items-center justify-center w-1/2">
+    <div class="hidden w-full lg:md:sm:flex items-center justify-center lg:md:sm:w-1/2">
       <Image
         src={imgWebp}
         alt="asd"
