--- a/src/components/Tabs/TabItem.astro
+++ b/src/components/Tabs/TabItem.astro
@@ -2,7 +2,7 @@
 const { dataTab, Item } = Astro.props;
 ---
 
-<button class="tab-button" data-tab={dataTab}>
+<button class="hidden lg:md:sm:block tab-button" data-tab={dataTab}>
   <span class="line"></span>
   <span>{Item}</span>
 </button>
